progressif/main/default/objects/InvoicingLine__c/InvoicingLine__c.object-meta.xml
<CustomObject>
    <label>Ligne de répartition</label>
    <nameField>
        <label>Nom de la ligne de facturation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes de répartition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>