progressif/main/default/objects/InvoicingLine__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <label>Article</label>
    <length>255</length>
    <type>Text</type>
</CustomField>