progressif/main/default/objects/InvoicingLine__c/fields/DutyFreeAmount__c.field-meta.xml
<CustomField>
    <fullName>DutyFreeAmount__c</fullName>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>