progressif/main/default/objects/InvoicingLine__c/fields/UseType__c.field-meta.xml
<CustomField>
    <fullName>UseType__c</fullName>
    <label>Type utile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>